* Process instance logs and messages are now components rather than pages, and are included within tabs on the process instance page, along with the diagram. * Removed the Zoom and Move modules when showing the readonly   Diagram.  Assured this readonly view is resized to fit the space when possible. * Checkbox Widget no longer displays a duplicate label. * CSS Tweaks   * All pages are limited to a max display width of 1440, with auto margins to center the main content on the page.   * "Show" pages, like ProcessInstanceShow, TaskShow have the primary content limited to 1000, also with auto-margins.   * Paragraphs, headings, blockquotes, list items are limited to a width of 640.   * Reduced margin bottom on all breadcrumbs.   * Slightly reduced the width and margin of tiles   * ordered lists and unordered lists show numbers and bullets now. * End user Instructions component can, optionally, auto-collapse, so that only a portion is displayed, along with a toggle.  This is how it is set up for the ProcessInstanceShow page. * Greatly reduced the lag in the interstitial page when doing a re-direct.

--- a/spiffworkflow-frontend/src/index.scss
+++ b/spiffworkflow-frontend/src/index.scss
@@ -15,3 +15,30 @@
 @use '@carbon/colors';
 // @use '@carbon/react/scss/colors';
 @use '@carbon/react/scss/themes';
+
+// Not certain the best location for this, but here are some global
+// tweaks the markdown styles.
+
+main {
+  max-width: 1440px;
+  margin: auto;
+}
+
+p, li, h1, h2, h3, h4, h5, h6, blockquote {
+  max-width: 640px;
+}
+
+div.show-page, div.markdown, div.markdown-collapsed, div.markdown-collapsable {
+  margin: 0 auto;
+  max-width: 1000px;
+  padding: 15px 0 15px 0;
+}
+
+.wmde-markdown ol {
+  list-style: decimal;
+}
+
+.wmde-markdown ul {
+  list-style: disc;
+}
+
